    drives update them when receive.denyCurrentBranch=updateInstead.
  * config group groupwanted numcopies schedule wanted required: 
    Avoid displaying extraneous messages about repository auto-init,
    git-annex branch merging, etc, when being used to get information.
  * git-annex.cabal: Make crypto-api a dependency even when built w/o
    webapp and test suite.

 -- Joey Hess <id@joeyh.name>  Tue, 14 Feb 2017 15:54:25 -0400

git-annex (6.20170214) unstable; urgency=medium

  * Increase default cost for p2p remotes from 200 to 1000.
    This makes git-annex prefer transferring data from special
    remotes when possible.
  * Remove -j short option for --json-progress; that option was already
    taken for --json.
  * vicfg: Include the numcopies configuation.
  * config: New command for storing configuration in the git-annex branch.
  * annex.autocommit can be configured via git-annex config, to control
    the default behavior in all clones of a repository.
  * New annex.synccontent config setting, which can be set to true to make
    git annex sync default to --content. This may become the default at
    some point in the future. As well as being configuable by git config,
    it can be configured by git-annex config to control the default
    behavior in all clones of a repository.
  * stack.yaml: Update to lts-7.18.
  * Some optimisations to string splitting code.
  * unused: When large files are checked right into git, avoid buffering
    their contents in memory.
  * unused: Improved memory use significantly when there are a lot
    of differences between branches.
  * Wormhole pairing will start to provide an appid to wormhole on
    2021-12-31. An appid can't be provided now because Debian stable is going
    to ship a older version of git-annex that does not provide an appid.
    Assumption is that by 2021-12-31, this version of git-annex will be
    shipped in a Debian stable release. If that turns out to not be the